--- a/bret/static/bret/css/custom.css
+++ b/bret/static/bret/css/custom.css
@@ -3,6 +3,7 @@
 /* =============================================== */
 body {
     text-align: center!important;
+	transform: scale(50%);
 }
 
 /* =============================================== */
