--- a/bret/static/bret/css/custom.css
+++ b/bret/static/bret/css/custom.css
@@ -3,6 +3,8 @@
 /* =============================================== */
 body {
     text-align: center!important;
+	transform: scale(0.5);
+    transform-origin: 0 0;
 }
 
 /* =============================================== */
