my commit message

--- a/bret/templates/bret/Decision.html
+++ b/bret/templates/bret/Decision.html
@@ -18,6 +18,7 @@
 {# *** SCRIPTS *** #}
 {# ****************************************************************************************************************** #}
 {% block scripts %}
+    <script src='https://lib.smartsparrow.com/simcapi-js-3.1.0.min.js'></script>
     <script src="{% static 'bret/js/angular.min.js' %}"></script>
     <script src="{% static 'bret/js/bret.js' %}"></script>
     <script>(function(angular){
