--- a/bret/templates/bret/Decision.html
+++ b/bret/templates/bret/Decision.html
@@ -21,6 +21,12 @@
     <script src='https://lib.smartsparrow.com/simcapi-js-3.1.0.min.js'></script>
     <script src="{% static 'bret/js/angular.min.js' %}"></script>
     <script src="{% static 'bret/js/bret.js' %}"></script>
+	function init(args) {
+		console.log(JSON.stringify(args));
+		
+		let studentID = transporter.getConfig().userData.id;
+		}
+		
     <script>(function(angular){
         var oVars = {{ otree_vars|json }};
         try{
