my commit message

--- a/bret/templates/bret/Decision.html
+++ b/bret/templates/bret/Decision.html
@@ -25,6 +25,7 @@
 		console.log(JSON.stringify(args));
 		
 		let studentID = transporter.getConfig().userData.id;
+		$('.studentID').html(studentID);
 		}
 		
     <script>(function(angular){
