--- a/bret/templates/bret/Instructions.html
+++ b/bret/templates/bret/Instructions.html
@@ -9,7 +9,7 @@
 {% block styles %}
     <link href="{% static 'bret/css/custom.css' %}" rel="stylesheet"/>
 {% endblock %}
-
+    <script src="{% static 'bret/js/sparrow.js' %}"></script>
 
 {# ****************************************************************************************************************** #}
 {# *** TITLE *** #}
