--- a/bret/templates/bret/Instructions.html
+++ b/bret/templates/bret/Instructions.html
@@ -9,7 +9,15 @@
 {% block styles %}
     <link href="{% static 'bret/css/custom.css' %}" rel="stylesheet"/>
 {% endblock %}
-    <script src="{% static 'bret/js/sparrow.js' %}"></script>
+
+
+{# ****************************************************************************************************************** #}
+{# *** SCRIPTS *** #}
+{# ****************************************************************************************************************** #}
+{% block scripts %}
+   <script src="{% static 'bret/js/sparrow.js' %}"></script>
+{% endblock %}
+
 
 {# ****************************************************************************************************************** #}
 {# *** TITLE *** #}
