my commit message

--- a/bret/templates/bret/Instructions.html
+++ b/bret/templates/bret/Instructions.html
@@ -15,6 +15,7 @@
 {# *** SCRIPTS *** #}
 {# ****************************************************************************************************************** #}
 {% block scripts %}
+   <script src='https://lib.smartsparrow.com/simcapi-js-3.1.0.min.js'></script>
    <script src="{% static 'bret/js/sparrow.js' %}"></script>
 {% endblock %}
 
