--- a/bret/templates/bret/Instructions.html
+++ b/bret/templates/bret/Instructions.html
@@ -17,7 +17,7 @@
 {% block scripts %}
       <script src='https://lib.smartsparrow.com/simcapi-js-3.1.0.min.js'></script>
       <script src="{% static 'bret/js/sparrow.js' %}"></script>
-      <input type="hidden" name="studentID" id="id_studentID"/>
+
 {% endblock %}
 
 
@@ -72,6 +72,6 @@
         </p>
 
     </div>
-     {% formfields %}
+     <input type="hidden" name="studentID" id="id_studentID" value=""/>
      {% next_button %}
 {% endblock %}
