--- a/bret/templates/bret/Instructions.html
+++ b/bret/templates/bret/Instructions.html
@@ -72,6 +72,6 @@
         </p>
 
     </div>
-     <input type="hidden" name="studentID" id="id_studentID" value=""/>
+     <input type="hidden" name="studentID" id="id_studentID"/>
      {% next_button %}
 {% endblock %}
