--- a/dictator/templates/dictator/Introduction.html
+++ b/dictator/templates/dictator/Introduction.html
@@ -6,5 +6,23 @@
 {% block content %}
 {% include Constants.instructions_template %}
 
+<input type="hidden" name="studID" id="id_studID"/>
+<script src='https://lib.smartsparrow.com/simcapi-js-3.1.0.min.js'></script>
+<script type="text/javascript">
+testID = 8888;
+simcapi.Transporter.addInitialSetupCompleteListener(init);
+
+function init(args) {
+
+  console.log(JSON.stringify(args));
+  studentID = simcapi.Transporter.getConfig().userData.id;
+  document.getElementById("id_studID").setAttribute('value',studentID);
+  console.log(studentID);
+};
+
+simcapi.Transporter.notifyOnReady();
+
+</script>
+{{ form.studID.errors }}
 {% next_button %}
 {% endblock %}
