--- a/bret/templates/bret/Results.html
+++ b/bret/templates/bret/Results.html
@@ -113,6 +113,16 @@
     {% endif %}
 
     <br/>
-    {% next_button %}
+<script type="text/javascript">
+
+
+</script>
+<script src='https://lib.smartsparrow.com/simcapi-js-3.1.0.min.js'></script>
+<script type="text/javascript">
+  $('button').click(function() {transporter.triggerCheck(); });
+</script>
+
+<button>Next</button>
+
 
 {% endblock %}
