--- a/bret/templates/bret/Results.html
+++ b/bret/templates/bret/Results.html
@@ -119,10 +119,19 @@
 </script>
 <script src='https://lib.smartsparrow.com/simcapi-js-3.1.0.min.js'></script>
 <script type="text/javascript">
-  $('button').click(function() {transporter.triggerCheck(); });
-</script>
+simcapi.Transporter.addInitialSetupCompleteListener(init);
 
+function init(args) {
+
+  $('button').click(function() {transporter.triggerCheck(); });
+
+};
+
+simcapi.Transporter.notifyOnReady();
+
+</script>
 <button>Next</button>
+
 
 
 {% endblock %}
