--- a/bret/templates/bret/Results.html
+++ b/bret/templates/bret/Results.html
@@ -113,14 +113,6 @@
     {% endif %}
 
     <br/>
-<script type="text/javascript">
-
-
-</script>
-<script src='https://lib.smartsparrow.com/simcapi-js-3.1.0.min.js'></script>
-
-<button>Next</button>
-
-
+    {% next_button %}
 
 {% endblock %}
