--- a/bret/templates/bret/Decision.html
+++ b/bret/templates/bret/Decision.html
@@ -8,7 +8,7 @@
 {# ****************************************************************************************************************** #}
 {% block styles %}
     <link href="{% static 'bret/css/bret.css' %}" rel="stylesheet"/>
-    <link href="{% static 'bret/css/custom 2.css' %}" rel="stylesheet"/>
+    <link href="{% static 'bret/css/custom.css' %}" rel="stylesheet"/>
     <link href="{% static 'bret/css/fontawesome-all.css' %}" rel="stylesheet"/>
     <style type="text/css">.ng-cloak{display:none !important;}</style>
 {% endblock %}
