--- a/bret/templates/bret/Results.html
+++ b/bret/templates/bret/Results.html
@@ -113,6 +113,8 @@
     {% endif %}
 
     <br/>
+    <script src='https://lib.smartsparrow.com/simcapi-js-3.1.0.min.js'></script>
+    <input id="clickMe" type="button" value="clickme" onclick="simcapi.Transporter.triggerCheck();" />
     {% next_button %}
 
 {% endblock %}
