--- a/bret/templates/bret/Results.html
+++ b/bret/templates/bret/Results.html
@@ -114,15 +114,9 @@
 
     <br/>
     <script src='https://lib.smartsparrow.com/simcapi-js-3.1.0.min.js'></script>
-<script type="text/javascript">
-  $(document).ready(function(){
-    $('#MyButton').click(function(){
-       simcapi.Transporter.triggerCheck();
-    });
-  });
-</script>
 
 <input type="button" value="Click me" id="MyButton" >
+document.getElementById("MyButton").onclick = function () { simcapi.Transporter.triggerCheck(); };
 
     {% next_button %}
 
