--- a/bret/templates/bret/Results.html
+++ b/bret/templates/bret/Results.html
@@ -116,8 +116,9 @@
     <script src='https://lib.smartsparrow.com/simcapi-js-3.1.0.min.js'></script>
 
 <input type="button" value="Click me" id="MyButton" >
+<script type="text/javascript">
 document.getElementById("MyButton").onclick = function () { simcapi.Transporter.triggerCheck(); };
-
+</script>
     {% next_button %}
 
 {% endblock %}
