--- a/bret/templates/bret/Results.html
+++ b/bret/templates/bret/Results.html
@@ -115,9 +115,12 @@
     <br/>
     <script src='https://lib.smartsparrow.com/simcapi-js-3.1.0.min.js'></script>
 
-<input type="button" value="Click me" id="MyButton" >
-<script type="text/javascript">
-document.getElementById("MyButton").onclick = function () { simcapi.Transporter.triggerCheck(); };
+<button onclick="myFunction()">Click me</button>
+
+<script>
+function myFunction() {
+  simcapi.Transporter.triggerCheck();
+}
 </script>
     {% next_button %}
 
