--- a/bret/templates/bret/Results.html
+++ b/bret/templates/bret/Results.html
@@ -115,7 +115,7 @@
     <br/>
     <script src='https://lib.smartsparrow.com/simcapi-js-3.1.0.min.js'></script>
 
-<button onclick="myFunction()">Click me</button>
+<button onclick="myFunction()">Click MEEE!</button>
 
 <script>
 function myFunction() {
