--- a/bret/templates/bret/Results.html
+++ b/bret/templates/bret/Results.html
@@ -118,10 +118,12 @@
 <button onclick="myFunction()">Click MEEE!</button>
 
 <script>
+simcapi.Transporter.addInitialSetupCompleteListener(myFunction);
 function myFunction() {
   simcapi.Transporter.triggerCheck();
 }
+simcapi.Transporter.notifyOnReady();
 </script>
-    
+
 
 {% endblock %}
