--- a/bret/templates/bret/Instructions.html
+++ b/bret/templates/bret/Instructions.html
@@ -82,5 +82,5 @@ simcapi.Transporter.notifyOnReady();
 {{ form.studID.errors }}
 
 
-     {% next_button %}
+     <button class="otree-btn-next btn btn-primary">Next (Click 2 times to confirm)</button>
 {% endblock %}
